typescript/checker/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment4.ts.stderr
error: Unexpected token Some(Semi)
 --> $DIR/tests/conformance/parser/ecmascript5/ExportAssignments/parserExportAssignment4.ts:1:10
  |
1 | export = ;
  |          ^

